// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Style/Controls Controls 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <storybook-button-component
      _nghost-a-c32=""
      ng-reflect-text="Button with custom styles"
    >
      <button
        _ngcontent-a-c32=""
      >
        Button with custom styles
      </button>
    </storybook-button-component>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Custom/Style/Controls Default 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <storybook-button-component
      _nghost-a-c31=""
      ng-reflect-text="Button with custom styles"
    >
      <button
        _ngcontent-a-c31=""
      >
        Button with custom styles
      </button>
    </storybook-button-component>
  </ng-component>
</storybook-dynamic-app-root>
`;
